<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="car.bkrc.com.car2021.ViewUtile.FirstActivity">

    <group>
        <item
            android:id="@+id/car_status"
            android:title="@string/follow_status"
            app:showAsAction="never" />
        <item
            android:id="@+id/car_control"
            android:title="@string/follow_control"
            app:showAsAction="never" />

        <item
            android:id="@+id/clear_coded_disc"
            android:title="@string/clear_coded_disc"
            app:showAsAction="never" />
        <item
            android:id="@+id/set_ConnectTransport_mark"
            android:title="@string/set_ConnectTransport_mark"
            app:showAsAction="never" />
        <item
            android:id="@+id/Android_Control"
            android:title="@string/trafficLightIdentifyTest"
            app:showAsAction="never" />

    </group>

    <group>
        <item
            android:title="     "
            app:showAsAction="always" />
    </group>

</menu>