<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/follow_status"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />  <!-- 如果要显示出来，就改为visible -->
        <Button
            android:id="@+id/control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/follow_control"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/clear_coded_disc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/clear_coded_disc"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />
        <Button
            android:id="@+id/set_ConnectTransport_mark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/set_ConnectTransport_mark"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />
        <Button
            android:id="@+id/Android_Control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/trafficLightIdentifyTest"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="6"
        android:background="@drawable/bg_selete_all">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_no_pic" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:background="@drawable/reference_background"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/refresh_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="15sp"
                android:background="#00000000"
                android:text="@string/Refresh"/>

            <ImageButton
                android:id="@+id/refresh_img_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:background="@drawable/ic_autorenew"

                />

        </LinearLayout>
        <TextView
            android:id="@+id/showip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="请重启设备！"
            android:lines="2"
            android:textSize="15sp"
            />

    </LinearLayout>

</LinearLayout>